fix overflow of viewer

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,21 @@ html {
 body {
   margin: 0;
   margin-bottom: 60px;
-  overflow: hidden;
-  overflow-y: auto;
+  overflow: none;
   font-family: "Open Sans", sans-serif;
   color: #2a282b;
+}
+
+body,
+html,
+#root,
+.main {
+  width: 100%;
+  height: 100%;
+}
+
+#root {
+  overflow-y: auto;
 }
 
 @font-face {
